# aoc-2023

day1/: dune  dune-project  problem.ml
day1/_build/: .db  .digest-db  log
day1/_build/default/: day1.dune-package  day_1.ml-gen  problem.pp.ml
day1/_build/default/.day_1.objs/: day_1__Problem.impl.d
day1/_build/default/.day_1.objs/byte/: day_1.cmi  day_1.cmo  day_1.cmt  day_1__Problem.cmi  day_1__Problem.cmt
day1/_build/default/.day_1.objs/native/: day_1.cmx
day1/_build/default/.dune/: configurator.v2
day1/_build/default/.merlin-conf/: lib-day_1
day1/_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
day1/_build/default/.ppx/8653ea30d544096511ee14c148ed6e40/: dune__exe___ppx.cmo
day1/_build/default/.ppx/8e3fb1120ce661745e7ed68a70958f84/: dune__exe___ppx.cmi  dune__exe___ppx.cmo
day1/_build/default/.ppx/bfcab61e6a21ecf6d2f80029fc1ef484/: dune__exe___ppx.cmo
day1/_build/default/lib/: day1.cma  day1.cmxa  day1.cmxs  day1.ml  day1.pp.ml  day1__.ml-gen  day1a.ml  day1a.pp.ml
day1/_build/default/lib/.day1.inline-tests/: partitions-best
day1/_build/default/lib/.day1.objs/: day1.impl.d  day1__Day1a.impl.d
day1/_build/default/lib/.day1.objs/byte/: day1.cmi  day1.cmo  day1.cmt  day1__.cmi  day1__.cmo  day1__.cmt  day1__Day1a.cmi  day1__Day1a.cmo  day1__Day1a.cmt
day1/_build/default/lib/.day1.objs/native/: day1.cmx  day1__.cmx  day1__Day1a.cmx
day1/_build/default/lib/.merlin-conf/: lib-day1
day1/_build/default/test/.merlin-conf/: exe-test_day1
day1/lib/: day1.ml  dune
day10/: dune-project
(+107 files in other folders)
