;; -*- Scheme -*-

(library
 (name day_1)
 (libraries base stdio)
 (preprocess (pps ppx_jane ppx_inline_test)))

(env
  (dev
    (flags (:standard
            -w -20 
            -w -27 
            -w -32 
            -w -34 
            -w -37 
            -w -39)))
  (release 
   (flags (:standard))))
